...
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/ride_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/request_status"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Request Opened:"/>

            <TextView
                android:id="@+id/user_pickup_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="Your Pick Up Time:"/>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Request Accepted:"/>

            <TextView
                android:id="@+id/user_arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="Your Arrival Time:"/>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Pick Up:"/>

            <TextView
                android:id="@+id/user_pickup_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="Your Pick Up Location:"/>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Drop Off:"/>

            <TextView
                android:id="@+id/user_dropoff_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="Your Drop Off Location:"/>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Fare:"/>

            <TextView
                android:id="@+id/user_fare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="Your Estimated Fare:"/>

...
