<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright (c) 2020. Gufy Guber
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="New Ride Request"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#fff"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pickup Location">
        <EditText
            android:id="@+id/start_location_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="false"
            android:inputType="none"
            android:focusable="false"
            android:layout_margin="20dp"
            android:textColor="#000"
            android:textStyle="normal"
            android:textSize="20sp">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Drop-off Location">
        <EditText
            android:id="@+id/end_location_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="false"
            android:inputType="none"
            android:focusable="false"
            android:layout_margin="20dp"
            android:textColor="#000"
            android:textStyle="normal"
            android:textSize="20sp">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fare_TILayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fare_edittext_hint">

            <EditText
                android:id="@+id/fare_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="normal"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/fair_fare_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/fair_fair_default_hint"
        android:textSize="16sp"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/cancel_ride_request_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:theme="@style/ThemeOverlay.LightButton"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/create_ride_request_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create Request"
            android:theme="@style/ThemeOverlay.LightButton"/>
    </LinearLayout>
</LinearLayout>