<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_map"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/rider_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity">

        <!-- Currently this floating action button appears on other fragments.
        ~ We only want it for RIDERS and on the map fragment
    -->

        <Button
            android:id="@+id/request_fab"
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="Request Ride"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:background="@drawable/long_fab"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/cancel_fab"
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="Cancel Ride"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:background="@drawable/long_fab"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/arrived_fab"
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="At Destination"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:background="@drawable/long_fab"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/pay_fab"
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="Pay"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:background="@drawable/long_fab"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/offline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:textColor="#FF0000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="OFFLINE"/>

    </fragment>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_border"
        android:id="@+id/relLayout1" >

        <fragment
            android:id = "@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name = "com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>


    </RelativeLayout>

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/relLayout1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_gps" />

</RelativeLayout>